--- a/Views/Pedido/Index.cshtml
+++ b/Views/Pedido/Index.cshtml
@@ -1,4 +1,4 @@
-@model MCBONALDSMVC.ViewModel.PedidoViewModel
+@model MCBONALDSMVC.ViewModel.PedidoViewModel;
 <main>
     
         <h2>Pede aí, jovem!</h2>
@@ -26,7 +26,6 @@
                 <br />
                 <input id="email" type="email" name="email"/>
             </div>
-
             <div class="double-field">
                 <div>
                     <label for="hamburguer">Hamburguer</label>
@@ -34,10 +33,8 @@
                         <option value="" disabled selected>Selecione</option>
                         @foreach (var hamburguer in Model.Hamburgueres)
                         {
-                            <option value=@hamburguer.Nome>@hamburguer.Nome por @hamburguer.Preco  
-                            
+                            <option value=@hamburguer.Nome>@hamburguer.Nome por @hamburguer.Preco 
                             </option>
-                            
                         }
                         <option value="combo">Combo</option>
                     </select>
@@ -46,8 +43,10 @@
                     <label for="shake">Shake</label>
                     <select id="shake" name="shake">
                         <option value="" disabled selected>Selecione</option>
-                        <option value="chocolate"> Chocolate</option>
-                        <option value="biscoito">Biscoito</option>
+                        @foreach(var s in Model.Shakes)
+                        {
+                        <option value=@s.Nome> @s.Nome por @s.Preco</option>
+                        }
                     </select>
                 </div>
             </div>
