--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-    <main>
+﻿    <main>
         <section id="banner">
             <div class="section-container">
                 <p>Peça o seu
@@ -104,3 +103,4 @@
             </div>
         </section>
     </main>
+   
