--- a/Views/Shared/Sucesso.cshtml
+++ b/Views/Shared/Sucesso.cshtml
@@ -1,3 +1,9 @@
+@model McBonaldsMVC.ViewModels.RespostaViewModel
 <main>
-    <h2> @ViewData["Action"] deu bom </h2>
+    <h2>
+        @Model.NomeView Deu Bom!
+    </h2>
+    <p>
+        @Model.Mensagem
+    </p>
 </main>
