--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,7 +1,5 @@
-﻿
-@{
-    var nomeViews = (string) ViewData["NomeView"];
-}
+﻿@model McBonaldsMVC.ViewModels.BaseViewModel
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -16,12 +14,11 @@
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Londrina+Solid:900%7COpen+Sans" rel="stylesheet">
     <link href="~/css/style.css" rel="stylesheet" type="text/css">
-    @if(!"Home".Equals(nomeViews))
+    @if(!"Home".Equals(@Model.NomeView))
     {
-    <link href="~/css/style-secondary-pages.css" rel="stylesheet" type="text/css">
-    <link href="~/css/style-form-pages.css" rel="stylesheet" type="text/css">
+        <link href="~/css/style-secondary-pages.css" rel="stylesheet" type="text/css">
+        <link href="~/css/style-form-pages.css" rel="stylesheet" type="text/css">
     }
-
     <!-- PASSO 2 - Copie a linha do <script> abaixo para o seu HTML -->
     <!-- Importar o Font Awesome para o projeto -->
     <script src="https://kit.fontawesome.com/349a64cb04.js"></script>
@@ -41,26 +38,33 @@
                     </li>
                     <!-- PASSO 4 - Adicione essa class="bt-common-menu" nas suas li -->
                     <!-- PASSO 5 - Adicione o onclick="toggleMobileMenu()" nas tags a -->
-                    <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Home" asp-action="Index" class="active">Principal</a></li>
-                    <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href='@Url.Action("Index", "Home")#hamburgueres'>Hamburgueres</a></li>
-                    <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href='@Url.Action("Index", "Home")#shakes'>Shakes</a></li>
-                    <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href='@Url.Action("Index", "Home")#Historia'>História</a></li>
-                    <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href='@Url.Action("Index", "Home")#local'>Local</a></li>
-                    <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Cliente" asp-action="Login">Login</a></li>
-                    <li><a id="bt-peca_ja"asp-controller="Pedido" asp-action="Index" class="active">Peça já!</a></li>
+                    <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Home" asp-Action="Index" class="active">Principal</a></li>
+                    <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href='@Url.Action("Index","Home")#hamburgueres'>Hamburgueres</a></li>
+                    <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href='@Url.Action("Index","Home")#shakes'>Shakes</a></li>
+                    <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href='@Url.Action("Index","Home")#historia'>História</a></li>
+                    <li class="bt-common-menu"><a onclick="toggleMobileMenu()" href='@Url.Action("Index","Home")#local'>Local</a></li>
+                    @if(string.IsNullOrEmpty(@Model.UsuarioEmail))
+                    {
+                        <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Cliente" asp-Action="Login">Login/Cadastro</a></li>
+                    }
+                    else
+                    {
+                        <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Cliente" asp-Action="Logoff">Logoff</a></li>
+                        <li class="bt-common-menu"><a onclick="toggleMobileMenu()" asp-controller="Cliente" asp-Action="Historico">Pedidos</a></li>
+                    }
+                    
+                    <li><a id="bt-peca_ja" asp-controller="Pedidos" asp-Action="Index">Peça já!</a></li>
                 </ul>
             </div>
         </nav>
-        @if("Home".Equals(nomeViews))
+        @if("Home".Equals(@Model.NomeView))
         {
-            Html.RenderPartial("_headerHomePage");
+            Html.RenderPartial("_HeaderHomePage");
         }
+        
     </header>
-
-            @RenderBody()
-
-        <!-- é usado para não copiar dnv codigo -->
-        <footer>
+    @RenderBody()
+     <footer>
         <div class="section-container">
             <address>
                 Avenida de Limeira, 539 - Campos Elíseos - SP
@@ -105,7 +109,4 @@
         
     </script>
 </body>
-
 </html>
-
-
