--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using MCBONALDSMVC
-@using MCBONALDSMVC.Models
+﻿@using McBonaldsMVC
+@using McBonaldsMVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
